# llm_all_by_hand

./: README.md  main.py  pyproject.toml
FlashAttention/: flash_attention.ipynb  flash_attention_2.ipynb  online_softmax.ipynb
KV_cache/: kvcache.ipynb
MLA/: mla_by_hand.ipynb  mla_with_matrix_absorb.ipynb
MOE/: gpt_with_moe.ipynb  moe_byhand.ipynb
ReduceMemo/: Q_Lora.ipynb
basic_algorithm/: AUC.ipynb  Activation_func.ipynb  LR.ipynb  Lora.ipynb  MHA_GQA_MQA.ipynb  ROPE.ipynb  bit_operation.ipynb  gradient_descent.ipynb  heap_sort.ipynb  multi_head_attention.ipynb  numpy_mlp.ipynb  self_attention.ipynb  transformer_decoder.ipynb
zero_llm/: gpt_by_hand.ipynb
